appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- assertVisible: "Bienvenue\_!"
- tapOn: "Débloque ton crédit"
- scrollUntilVisible:
    element: "Se connecter"
    direction: DOWN
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/StopApp.yml # Stop App