appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- tapOn: "Nouvelle fenêtre\_: Centre d’aide"
# TODO : comprendre pourquoi maestro ne détecte pas le texte   "aide.passculture.app" - assertVisible: "aide.passculture.app"
- assertVisible:
    id: "main-content"
- tapOn: "Applications récentes"
- tapOn:
    id: "com.sec.android.app.launcher:id/snapshot"
    index: 0
- runFlow: reusableFlows/StopApp.yml # Stop App