appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- tapOn: "Films, séries, cinéma"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "50%,71%"
- tapOn:
    id: "Réserver l’offre"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConnect.yml
- runFlow: reusableFlows/StopApp.yml # Stop App