appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: src/features/auth/ToLogin.yml # Se connecter
# l'action sur le bouton Se connecter ne fonctionne pas dans ce cas de figure,
    # la solution de clique sur la position est donc une solution de contournement.
    # Ceci explique la mise en commentaire de la commande se connecter
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "91%,89%"
#- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConnect.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "République Française - Liberté Égalité Fraternité"
    direction: DOWN
- assertVisible: "République Française - Liberté Égalité Fraternité"

- assertVisible:
    text: "Déconnexion"
    index: 1
- tapOn:
    text: "Déconnexion"
    index: 1
- runFlow: reusableFlows/StopApp.yml # Stop App