appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- tapOn: "Tout refuser"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLetsGo.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonPass.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonAge18.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- tapOn: "Applications récentes"
- tapOn: "Tout fermer"
- launchApp:
      appId: 'app.passculture.staging'
      clearState: false
- assertVisible: "Bienvenue\_!"
- assertVisible: "Débloque ton crédit"
- runFlow: reusableFlows/StopApp.yml # Stop App