appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConnect.yml
- tapOn: "Mot de passe oublié\_?"
- assertVisible: "Mot de passe oublié\_?"
- tapOn: "Mot de passe oublié\_?"
#- TODO : comprendre pourquoi le wording n'est pas capté par maestro
#- assertVisible: "Saisis ton adresse e-mail pour recevoir un lien qui te permettra de réinitialiser ton mot de passe !"
- assertVisible: "Adresse e-mail"
- inputText: ${USERNAME}
- tapOn: "Valider"
- runFlow: reusableFlows/StopApp.yml # Stop App