appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- tapOn: "Choisir les cookies"
- tapOn: "Interrupteur Tout accepter"
- tapOn: "Interrupteur Tout accepter"
- tapOn: "Interrupteur Personnaliser ta navigation"
- tapOn: "Interrupteur Enregistrer des statistiques de navigation"
- tapOn: "Interrupteur Mesurer l’efficacité de nos publicités"
- tapOn: "Enregistrer mes choix"
- runFlow: reusableFlows/StopApp.yml # Stop App