appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- tapOn: "Films, séries, cinéma"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
      point: "50%,71%"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: src/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- tapOn: "Duo" # Filtre offre Duo
- assertVisible: "Uniquement les offres duo"
- assertVisible: "Seules les sorties seront affichées"
- tapOn:
      id: "Interrupteur limitDuoOfferSearch"
- assertVisible: "Réinitialiser"
- tapOn: "Réinitialiser"
- tapOn:
      id: "Interrupteur limitDuoOfferSearch"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearch.yml
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "49%,84%"
- tapOn:
    point: "49%,84%"
- assertVisible: "Voir les disponibilités"
- tapOn: "Voir les disponibilités"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "37%,72%"
- assertVisible: "Valider la date"
- tapOn: "Valider la date"
- assertVisible: "Choix des options"
- assertVisible: "Horaire"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "50%,75%"
- assertVisible: "Valider lʼhoraire"
- tapOn: "Valider lʼhoraire"
- assertVisible: "Choix des options"
- tapOn: "Nombre de places"
- assertVisible: "Solo"
- assertVisible: "Duo"
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
    point: "53%,72%"
- assertVisible: "Finaliser ma réservation"
- tapOn: "Finaliser ma réservation"
- assertVisible: "Détails de la réservation"
- assertVisible: "Les biens acquis ou réservés sur le pass Culture sont destinés à\
    \ un usage strictement personnel et ne peuvent faire l’objet de revente."
- assertVisible: "Informations"
- assertVisible: "Lieu de l’événement"
- assertVisible: "Conditions d’annulation"
- assertVisible: "Confirmer la réservation"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConfirmReservation.yml
- assertVisible: "Réservation confirmée\_!"
- assertVisible: "Tu peux retrouver toutes les informations concernant ta réservation\
    \ sur l’application."
- assertVisible: "Voir ma réservation"
- assertVisible: "Partager l’offre"
- assertVisible: "Retourner à l’accueil"
- tapOn: "Voir ma réservation"
- scrollUntilVisible:
    element: "Annuler ma réservation"
    direction: DOWN
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonCancelMyReservation.yml
#- TODO : comprendre pourauoi le wording n'est pas détecté par MAESTRO
#- assertVisible:
#    id: "cancel-annulation-message"
- assertVisible: "Réservations terminées"
- runFlow: reusableFlows/StopApp.yml # Stop App