appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonSearchOffers.yml
- tapOn: "Films, séries, cinéma"
- tapOn:
    point: "50%,71%"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: src/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/ui/components/buttons/DoubleActionButtonConnect.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearchOffers.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonDateAndHour.yml
- runFlow: reusableFlows/ui/components/IdButtons/SimpleIdButtonSwitchDate.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonThisWeek.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonSearch.yml
- tapOn:
    point: "49%,84%"
- tapOn:
    point: "49%,84%"
- assertVisible: "Voir les disponibilités"
- tapOn: "Voir les disponibilités"
- tapOn:
    point: "37%,59%"
- assertVisible: "Valider la date"
- tapOn: "Valider la date"
- assertVisible: "Choix des options"
- assertVisible: "Horaire"
- tapOn:
    point: "50%,75%"
- assertVisible: "Valider lʼhoraire"
- tapOn: "Valider lʼhoraire"
- assertVisible: "Choix des options"
- tapOn: "Nombre de places"
- assertVisible: "Solo"
- assertVisible: "Duo"
- tapOn:
    point: "19%,74%"
- assertVisible: "Finaliser ma réservation"
- tapOn: "Finaliser ma réservation"
- assertVisible: "Détails de la réservation"
- assertVisible: "Les biens acquis ou réservés sur le pass Culture sont destinés à\
    \ un usage strictement personnel et ne peuvent faire l’objet de revente."
- assertVisible: "Informations"
- assertVisible: "Lieu de l’événement"
- assertVisible: "Conditions d’annulation"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConfirmReservation.yml
- assertVisible: "Réservation confirmée\_!"
- assertVisible: "Tu peux retrouver toutes les informations concernant ta réservation\
    \ sur l’application."
- assertVisible: "Voir ma réservation"
- assertVisible: "Partager l’offre"
- assertVisible: "Retourner à l’accueil"
- tapOn: "Voir ma réservation"
- scrollUntilVisible:
      element: "Annuler ma réservation"
      direction: DOWN
#- TODO : comprendre pourauoi le wording n'est pas détecté par MAESTRO
#- assertVisible:
#    id: "cancel-annulation-message"
- tapOn: "Voir le détail de l’offre"

- tapOn:
      point: "49%,32%"
- tapOn:
      point: "50%,34%"
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBookerOffer.yml
- runFlow: src/features/bookOffer/PreBookingPage.yml #PreBookingReservation
- tapOn: "Confirmer la réservation"
- runFlow: src/features/bookOffer/BookingConfirmationPage.yml #BookingConfirmationPage
- tapOn: "Voir ma réservation"
- assertVisible: "Pour profiter de ta réservation, tu dois présenter ta carte d’identité\
    \ et ce code à 6 caractères. N’oublie pas que tu n’as pas le droit de le revendre\
    \ ou le céder."
- assertVisible: "Ma réservation"
- tapOn:
      id: "final-animated-icon-back"
- assertVisible:
      text: "Mes réservations"
      index: 0
- assertVisible: "Mes réservations"

- tapOn:
      point: "61%,16%"

- scrollUntilVisible:
      element: "Annuler ma réservation"
      direction: DOWN
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonCancelMyReservation.yml
- runFlow: src/features/bookings/BookingCancellationPage.yml # BookingCancellationPage
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonCancelMyReservation.yml
- assertVisible: "Réservations terminées"
- runFlow: reusableFlows/StopApp.yml # Stop App