appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch

- tapOn: "Mes favoris"
- tapOn: "Créer un compte"
- assertVisible: "Crée-toi un compte"
- inputText: ${USERNAME}
- tapOn: "J’accepte de recevoir les newsletters, bons plans et recommandations personnalisé\
    es du pass Culture."
- tapOn: "J’accepte de recevoir les newsletters, bons plans et recommandations personnalisé\
    es du pass Culture."
- tapOn: "Continuer vers l’étape Mot de passe"
- inputText: ${PASSWORD}
#- TODO trouver une solution pour cliquer sans passer par la position.
- tapOn:
      point: "50%,40%"
- tapOn: "Continuer vers l’étape Date de naissance"


- runFlow: reusableFlows/StopApp.yml # Stop App