appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "Confidentialité"
    direction: DOWN

- scrollUntilVisible:
      element: "Informations légales"
      direction: DOWN

- scrollUntilVisible:
    element: "Suivre le pass Culture"
    direction: DOWN
- assertVisible: "Suivre le pass Culture"

- tapOn: "Informations légales"

- scrollUntilVisible:
      element: "Conditions Générales d’Utilisation"
      direction: DOWN
- tapOn: "Conditions Générales d’Utilisation"
- tapOn: "Retour"
- tapOn: "Applications récentes"
- tapOn:
    id: "com.sec.android.app.launcher:id/snapshot"
    index: 1
- tapOn: "Charte de protection des données personnelles"
- tapOn: "Applications récentes"
- tapOn:
    id: "com.sec.android.app.launcher:id/snapshot"
    index: 0
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonBack.yml
- runFlow: reusableFlows/StopApp.yml # Stop App