appId: app.passculture.staging
---
- tapOn: "Tout accepter"
- tapOn: "C’est parti\_!"
- tapOn: "Passer"
- tapOn:
      id: "j’ai 18 ans"
- tapOn: "Plus tard"