appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- assertVisible: "Bienvenue\_!"
- assertVisible: "Débloque ton crédit"
- tapOn: "Débloque ton crédit"
- runFlow: reusableFlows/features/profile/AccountCreationPage.yml # Creation Page
- runFlow: reusableFlows/features/auth/CguPage.yml # Cgu Page
- runFlow: reusableFlows/features/auth/ConfirmationEmailPage.yml # ConfirmationEmail Page
- runFlow: reusableFlows/StopApp.yml # Stop App