appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- assertVisible: "Bienvenue\_!"
- tapOn: "Débloque ton crédit"
- scrollUntilVisible:
    element: "Se connecter"
    direction: DOWN
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConnect.yml
- runFlow: reusableFlows/StopApp.yml # Stop App