appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- assertVisible: "Bienvenue\_!"
- assertVisible: "Débloque ton crédit"
- tapOn:
    id: "module-background"
- assertVisible: "Crée-toi un compte"
- runFlow: reusableFlows/StopApp.yml # Stop App