appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- tapOn: "Nouvelle fenêtre\_: Centre d’aide"
- assertVisible:
    id: "com.sec.android.app.sbrowser:id/location_bar_edit_text"
- assertVisible:
    id: "com.sec.android.app.sbrowser:id/sbrowser_tab_holder"
- tapOn: "Applications récentes"
- tapOn:
    id: "com.sec.android.app.launcher:id/snapshot"
    index: 0
- runFlow: reusableFlows/StopApp.yml # Stop App