appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearchOffers.yml'
- runFlow:
    when:
      visible: 'Recherche'
    file: 'reusableFlows/components/buttons/SimpleActionButtonSearch.web.yml'
- tapOn: "Offre, artiste, lieu culturel..."
- inputText: ${MAESTRO_PHYSICAL_OFFER}
- pressKey: Enter
- tapOn:
    label: "Sélection de la 1ère offre disponible"
    below:
      text: .*résultats
- tapOn:
    id: 'Réserver l’offre'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConnect.yml
- runFlow: reusableFlows/StopApp.yml # Stop App
