appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml # Se connecter
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- runFlow:
    when:
      visible: 'Plus Tard'
    file: reusableFlows/components/buttons/SimpleActionButtonLater.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
    element: "République Française - Liberté Égalité Fraternité"
    direction: DOWN
- assertVisible: "République Française - Liberté Égalité Fraternité"

- assertVisible:
    text: "Déconnexion"
    index: 1
- tapOn:
    text: "Déconnexion"
    index: 1
- runFlow: reusableFlows/StopApp.yml # Stop App