appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- tapOn: "Tout refuser"
- runFlow:
    when:
      visible: "C’est parti\_!"
    file: "reusableFlows/components/buttons/SimpleActionButtonLetsGo.yml"
- runFlow: reusableFlows/components/buttons/SimpleActionButtonPass.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonAge18.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonLater.yml
- tapOn: "Applications récentes"
- tapOn: "Tout fermer"
- launchApp:
      appId: ${MAESTRO_APP_ID}
      clearState: false
- assertVisible: "Bienvenue\_!"
- assertVisible: "Débloque ton crédit"
- runFlow: reusableFlows/StopApp.yml # Stop App