appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: "Respect de ta vie privée"
    file: "reusableFlows/FirstLaunch.yml" # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- scrollUntilVisible:
      element: "Facebook"
      direction: DOWN
- tapOn: "Facebook"
- tapOn: "Retour"

- tapOn: "Tiktok"
- tapOn: "Retour"

- tapOn: "Twitter"
- tapOn: "Retour"

- tapOn: "Instagram"
- tapOn: "Applications récentes"

- tapOn:
    id: "com.sec.android.app.launcher:id/snapshot"
    index: 0
- runFlow: reusableFlows/StopApp.yml # Stop App