appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml'
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/features/auth/ToLogin.yml
- runFlow: reusableFlows/components/buttons/DoubleActionButtonConnect.yml
- tapOn: 'Plus tard'
- runFlow:
    when:
      visible: 'Rechercher des offres'
    file: 'reusableFlows/components/buttons/DoubleActionButtonSearchOffers.yml'
- tapOn: 'Cinéma'
- tapOn: 'Ma position'
- tapOn: 'Partout'
- tapOn: 'Catégories'
- tapOn: 'Séances de cinéma'
- tapOn: 'Rechercher'

- tapOn:
    label: 'Sélection de la 1ère offre disponible'
    below:
      text: .*résultats
- tapOn: 'Voir les disponibilités'
- tapOn:
    label: 'Sélection de la 1ère date disponible'
    enabled: true
    above:
      text: .*€
- tapOn: 'Valider la date'
- tapOn:
    label: 'Sélection du 1er horaire disponible'
    below:
      text: 'Horaire'
- tapOn: 'Valider lʼhoraire'
- tapOn: 'Solo'
- tapOn: 'Finaliser ma réservation'
- tapOn: 'Confirmer la réservation'
- tapOn: 'Voir ma réservation'
- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'
